--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=polling
 
-# Server
+# Server (??X)
 server.port=9000
 
 server.error.whitelabel.enabled=false
@@ -11,9 +11,9 @@ spring.web.resources.add-mappings=false
 
 ## Database Test Ver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/polling?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=polling
-spring.datasource.password=polling
+#spring.datasource.url=jdbc:mysql://localhost:3306/polling?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
+#spring.datasource.username=polling
+#spring.datasource.password=polling
 
 ## Database Deploy ver
 
@@ -22,9 +22,9 @@ spring.datasource.password=polling
 #spring.datasource.username=Startoy
 #spring.datasource.password=Startoy1234
 
-#spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
-#spring.datasource.username=Startoy
-#spring.datasource.password=Startoy1234
+spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
+spring.datasource.username=Startoy
+spring.datasource.password=Startoy1234
 
 
 
