--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,9 @@ dependencies {
     // Springboot Acutator
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+    //Sentry
+    implementation 'io.sentry:sentry-spring-boot-starter-jakarta:7.14.0'
+
 }
 
 test {
