--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,23 +20,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.password=polling
 
 ## Database Deploy ver
-
-
-#spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
-#spring.datasource.username=Startoy
-#spring.datasource.password=Startoy1234
-
 spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
 spring.datasource.username=Startoy
 spring.datasource.password=Startoy1234
-
-
-
-# git PR ? ?? ??
-#spring.datasource.url=${SPRING_DATASOURCE_URL}
-#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-# ?? ??
 
 # Logging
 logging.level.org.springframework=info
@@ -97,3 +83,8 @@ spring.profiles.active=private
 
 # Actuator
 management.endpoints.web.exposure.include=*
+
+#Sentry
+sentry.dsn=https://a1620ee73efd74a664defb54d7c8741f@o4508062521688064.ingest.us.sentry.io/4508062524047360
+sentry.traces-sample-rate=1.0
+sentry.environment=production
