--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -123,7 +123,7 @@ jobs:
         with:
           host: ${{ secrets.LIGHTSAIL_HOST_DEV }}
           username: ubuntu
-          key: ${{ secrets.LIGHTSAIL_SSH_KEY_DEV }}
+          key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
           source: '/home/runner/work/polling-backend/polling-backend/build/libs/polling-0.0.1-SNAPSHOT.jar' # 절대 경로 사용
           target: '/home/ubuntu/polling-backend'
           overwrite: true # 파일 덮어쓰기 허용
