--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -96,26 +96,6 @@ jobs:
 
       - name: 빌드 결과 확인
         run: ls -la /home/runner/work/polling-backend/polling-backend/build/libs/ # 절대 경로 사용
-         
-########################################################
-          
-      # - name: 기존 JAR 파일 삭제 (서버에서)
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: ${{ secrets.LIGHTSAIL_HOST_DEV }}
-      #     username: ubuntu
-      #     key: ${{ secrets.LIGHTSAIL_SSH_KEY_DEV }}
-      #     script: | # 실행 중인 애플리케이션 프로세스가 있는지 확인하고, 있으면 종료 -> 기존 JAR 파일 삭제
-      #       if pgrep -f "java -jar /home/ubuntu/polling-backend/polling-0.0.1-SNAPSHOT.jar"; then 
-      #         echo "애플리케이션 프로세스를 종료합니다."
-      #         pkill -f 'java -jar /home/ubuntu/polling-backend/*.jar'
-      #       else
-      #         echo "실행 중인 애플리케이션 프로세스가 없습니다."
-      #       fi
-      #       rm -rf /home/ubuntu/polling-backend/*.jar
-
-      #     debug: true
-########################################################
 
       
       - name: JAR 파일 전송
@@ -131,16 +111,18 @@ jobs:
           timeout: 150s # 타임아웃 시간 증가
       
 
-      - name: 서버에서 애플리케이션 실행
+      - name: 실행 중인 jar 파일 종료
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.LIGHTSAIL_HOST_DEV }}
-          username: ubuntu
-          key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
+           host: ${{ secrets.LIGHTSAIL_HOST_DEV }}
+           username: ubuntu
+           key: ${{ secrets.LIGHTSAIL_SSH_KEY_DEV }}
+           script: |
+             if pgrep -f "java -jar /home/ubuntu/polling-backend/github/workspace/build/libs/polling-0.0.1-SNAPSHOT.jar"; then 
+               echo "애플리케이션 프로세스를 종료합니다."
+               pkill -f 'java -jar /home/ubuntu/polling-backend/github/workspace/build/libs/polling-0.0.1-SNAPSHOT.jar'
+             else
+               echo "실행 중인 애플리케이션 프로세스가 없습니다."
+             fi
 
-          script: |
-            java -jar /home/ubuntu/polling-backend/github/workspace/build/libs/polling-0.0.1-SNAPSHOT.jar > /home/ubuntu/polling-backend/github/workspace/build/libs/app.log 2>&1 &
-
-          debug: true
-          timeout: 1500s
-          command_timeout: 1500s
+           debug: true
