--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -73,7 +73,20 @@ jobs:
           aws-region: ap-northeast-2
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          
+      - name: 현재 작업 디렉토리 확인
+        run: |
+          echo "현재 작업 디렉토리:"
+          pwd
 
+      - name: Gradle Wrapper에 실행 권한 추가
+        run: chmod +x ./gradlew
+
+      - name: Gradle 빌드 (deploy job에서)
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }} # Sentry 인증 토큰 전달
+        run: ./gradlew clean build --scan
+        
       - name: 빌드 디렉토리 확인
         run: ls -la /home/runner/work/polling-backend/polling-backend/build/
 
