--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -117,14 +117,8 @@ jobs:
            script: |
             if pgrep -f "java -jar /home/ubuntu/polling-backend/github/workspace/build/libs/polling-0.0.1-SNAPSHOT.jar"; then
               echo "애플리케이션 프로세스를 종료합니다."
-              pkill -f 'java -jar /home/ubuntu/polling-backend/github/workspace/build/libs/polling-0.0.1-SNAPSHOT.jar'
-              if [ $? -eq 0 ] || [ $? -eq 143 ]; then
-                echo "프로세스가 성공적으로 종료되었습니다."
-                exit 0
-              else
-                echo "프로세스 종료 중 오류가 발생했습니다."
-                exit 1
-              fi
+              pkill -f 'java -jar /home/ubuntu/polling-backend/github/workspace/build/libs/polling-0.0.1-SNAPSHOT.jar'; then
+              exit 0
             else
               echo "실행 중인 애플리케이션 프로세스가 없습니다."
               exit 0
