--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -60,6 +60,7 @@ jobs:
       
       - name: 실행 중인 jar 파일 종료
         uses: appleboy/ssh-action@v1.1.0
+        continue-on-error: true
         with:
            host: ${{ secrets.LIGHTSAIL_HOST_DEV }}
            username: ubuntu
@@ -67,15 +68,17 @@ jobs:
            debug: true
            timeout: 300s
            script: |
-            pids=$(pgrep -f "java -jar /home/ubuntu/polling-backend/github/workspace/build/libs/polling-0.0.1-SNAPSHOT.jar")
-            echo "검색된 PID 목록: $pids"
-
-            if [ -n "$pid" ]; then
-              kill $pid
+            if pgrep -f "java -jar /home/ubuntu/polling-backend/github/workspace/build/libs/polling-0.0.1-SNAPSHOT.jar"; then
+              echo "애플리케이션 프로세스를 종료합니다."
+              pkill -f 'java -jar /home/ubuntu/polling-backend/github/workspace/build/libs/polling-0.0.1-SNAPSHOT.jar'
+              if [ $? -eq 0 ] || [ $? -eq 143 ]; then
+                echo "프로세스가 성공적으로 종료되었습니다."
+                exit 0
+              else
+                echo "프로세스 종료 중 오류가 발생했습니다."
+                exit 1
+              fi
             else
               echo "실행 중인 애플리케이션 프로세스가 없습니다."
+              exit 0
             fi
-
-      - name: kill이 이루어졌을 때에 exit 0
-        if: failure()
-        run: exit 0
